@startuml
class TileDrawer extends Rectangle {
    - Tile tile
    - CheckersApp app
    - boolean isHighlighted
    + TileDrawer(Tile tile, CheckersApp app)
    + void drawTile()
    + void highlight()
    + void clearHighlight()
}

class PieceDrawer extends StackPane {
    - int oldX, oldY
    - Piece piece
    - CheckersApp app
    - List<Rectangle> highlightedTiles
    - static DropShadow glowEffect
    + PieceDrawer(Piece piece, CheckersApp app)
    + void move(int x, int y)
    + void abortMove()
    + void promoteToKing()
    + void demoteToNormal()
    + void highlightMoves()
    + void updateGlow()
    + void clearHighlight()
}

TileDrawer *-- Tile
PieceDrawer *-- Piece
PieceDrawer *-- CheckersApp
TileDrawer *-- CheckersApp
@enduml
